3dview axes navigation gizmo gets stuck on and tooltip shows up in outliner #66071

Closed
opened 2019-06-24 05:56:44 +02:00 by Gavin Scott · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-06-23 22:45, hash: 9c5d54bfaf

Short description of error
If the mouse pointer passes over the axes navigation gizmo when moving the mouse from the 3dview to the outliner, then the highlight on the gizmo does not get reset if no mouse event is reported in the small gap between the gizmo and the edge of the 3dview, and when the mouse stops moving you get the hover tooltip from the gizmo stuck on there until you trigger a new tooltip or move the mouse back to the 3dview.

Exact steps for others to reproduce the error
Default scene, start with the mouse in the 3dview to the left of the axes navigation gizmo somewhere.
Rapidly move the mouse to the outliner, passing over the gizmo.
If the system did not report a mouse event between leaving the gizmo and leaving the 3dview, then the gizmo remains highlighted, and when you stop moving the mouse the tooltip for the gizmo pops up and does not go away until you either move the mouse back to the 3dview or trigger another tooltip.

Example showing the highlighted gizmo and the tooltip now displayed in the Outliner window. The mouse is over the Camera object in the outliner.

image.png

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 74), branch: master (modified), commit date: 2019-06-23 22:45, hash: `9c5d54bfaf` **Short description of error** If the mouse pointer passes over the axes navigation gizmo when moving the mouse from the 3dview to the outliner, then the highlight on the gizmo does not get reset if no mouse event is reported in the small gap between the gizmo and the edge of the 3dview, and when the mouse stops moving you get the hover tooltip from the gizmo stuck on there until you trigger a new tooltip or move the mouse back to the 3dview. **Exact steps for others to reproduce the error** Default scene, start with the mouse in the 3dview to the left of the axes navigation gizmo somewhere. Rapidly move the mouse to the outliner, passing over the gizmo. If the system did not report a mouse event between leaving the gizmo and leaving the 3dview, then the gizmo remains highlighted, and when you stop moving the mouse the tooltip for the gizmo pops up and does not go away until you either move the mouse back to the 3dview or trigger another tooltip. Example showing the highlighted gizmo and the tooltip now displayed in the Outliner window. The mouse is over the Camera object in the outliner. ![image.png](https://archive.blender.org/developer/F7543711/image.png)
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott

Added subscriber: @rocketman

Added subscriber: @rocketman

I was able to reproduce this with all of the navigation gizmos, but only the navigation gizmos. None of the other buttons fail to reset when the mouse enters another window. Strange!

I was able to reproduce this with all of the navigation gizmos, but only the navigation gizmos. None of the other buttons fail to reset when the mouse enters another window. Strange!

This issue was referenced by 829561c03c

This issue was referenced by 829561c03cce4d2bfab18bba4e7e7b5351addcd3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-06-24 09:33:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66071
No description provided.