Fix T66071: Navigation tooltip shows outside of 3D view

Clear gizmo highlight when the cursor leaves the region.